--- a/DYZB/Classes/Recommend/View/CategoryCollectionViewCell.xib
+++ b/DYZB/Classes/Recommend/View/CategoryCollectionViewCell.xib
@@ -12,27 +12,38 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CategoryCollectionViewCell" customModule="DYZB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="110" height="127"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="110" height="127"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Oa-X5-bFr">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="英雄联盟" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Oa-X5-bFr">
+                        <rect key="frame" x="0.0" y="71.5" width="110" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1yH-De-oIx">
+                        <rect key="frame" x="35" y="23.5" width="40" height="40"/>
+                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="ERE-cP-OOz"/>
+                            <constraint firstAttribute="width" constant="40" id="MOj-wR-ksD"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="7Oa-X5-bFr" secondAttribute="bottom" id="8WP-Cu-OBW"/>
-                <constraint firstAttribute="trailing" secondItem="7Oa-X5-bFr" secondAttribute="trailing" id="AtX-KT-AtR"/>
-                <constraint firstItem="7Oa-X5-bFr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="NF6-93-lrD"/>
-                <constraint firstItem="7Oa-X5-bFr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NUJ-sR-eAV"/>
+                <constraint firstItem="1yH-De-oIx" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="1WZ-gU-eoW"/>
+                <constraint firstItem="1yH-De-oIx" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-20" id="gIa-p2-LaA"/>
+                <constraint firstItem="7Oa-X5-bFr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="qsf-yX-oG4"/>
+                <constraint firstItem="7Oa-X5-bFr" firstAttribute="top" secondItem="1yH-De-oIx" secondAttribute="bottom" constant="8" id="sl2-Lq-ucJ"/>
+                <constraint firstAttribute="trailing" secondItem="7Oa-X5-bFr" secondAttribute="trailing" id="zYh-Oc-OUj"/>
             </constraints>
+            <size key="customSize" width="110" height="127"/>
+            <point key="canvasLocation" x="180.80000000000001" y="151.57421289355324"/>
         </collectionViewCell>
     </objects>
 </document>
